fix: spacing and layout for lead

--- a/frappe_theme/public/scss/style.scss
+++ b/frappe_theme/public/scss/style.scss
@@ -214,6 +214,7 @@ section {
 	.lead {
 		margin-right: auto;
 		margin-left: auto;
+		padding: 0 1rem;
 		margin-top: 0;
 
 		@media (min-width: 576px) {
